create category endpoint and documentation
