# internal/api/routes.go
@@ -1,7 +1,10 @@
 package api
 
 import (
+	"log"
+
 	"github.com/JairoRiver/personal_blog_backend/docs" // Swagger generated files
+	"github.com/JairoRiver/personal_blog_backend/pkg/util"
 	"github.com/gin-gonic/gin"
 
 	swaggerFiles "github.com/swaggo/files"     // swagger embed files
@@ -9,11 +12,16 @@ import (
 )
 
 func (server *Server) setupRouter() {
+	config, err := util.LoadConfig(".", "app")
+	if err != nil {
+		log.Fatal("cannot load config:", err)
+	}
+
 	// Swagger 2.0 Meta Information
 	docs.SwaggerInfo.Title = "Personal Blog - API"
 	docs.SwaggerInfo.Description = "Personal Blog - Post and Users API"
 	docs.SwaggerInfo.Version = "1.0"
-	docs.SwaggerInfo.Host = "localhost:8080"
+	docs.SwaggerInfo.Host = config.HostName
 	docs.SwaggerInfo.BasePath = "/v1"
 	//	@securityDefinitions.apiKey	JWT
 	//	@in							header
@@ -33,6 +41,13 @@ func (server *Server) setupRouter() {
 	authRoutes.PUT("/user/:id", server.updateUser)
 	authRoutes.DELETE("/user/:id", server.deleteUser)
 	apiRoutes.POST("login", server.loginUser)
+
+	// Categories routes
+	authRoutes.POST("/category", server.createCategory)
+	authRoutes.GET("/category/:id", server.getCategory)
+	authRoutes.GET("/categories", server.listCategories)
+	authRoutes.PUT("/category/:id", server.updateCategory)
+	authRoutes.DELETE("/category/:id", server.deleteCategory)
 
 	// swagger
 	url := ginSwagger.URL("http://localhost:8080/swagger/doc.json")
